fix search result dropdown spacing

--- a/jekyll-tipue-search/assets/tipuesearch/css/tipuesearch-component.css
+++ b/jekyll-tipue-search/assets/tipuesearch/css/tipuesearch-component.css
@@ -45,10 +45,19 @@
      width: 100%;
 }
 
+.tipue_search_content_title p {
+     padding: 0;
+     padding-right: 0.5em;
+     margin: 0;
+     overflow-wrap: break-word;
+     flex-grow: 2;
+}
+
 .tipue_search_content_title a {
      color: black;
-     display: block;
      padding-left: 2em;
+     display: flex;
+     flex-flow: row nowrap;
 }
 
 /* COUNT */
